--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		</div>
 		
 		<div id="colonne2">
-			<img src="./images/pub.jpg" alt="Publicité"/>
+			<img src="./images/pub.jpg" alt="Publicité" width="300px"/>
 		</div>
 		
 		<div id="centre">
